Simplify dependencies.